Darwin Build Scripts Change History
-----------------------------------
Release 36 [2-May-2013]
	- darwinup: fix bad return code from update_xpc_services_cache.

Release 35 [24-Apr-2013]
	- all: fix implicit integer conversions.

Release 34.1 [14-Mar-2013]
Release 34 [12-Mar-2013]
	- darwintrace: avoid snprintf(3); manually construct log messages.

Release 33 [29-Aug-2012]
	- darwinup: Fix uninitialised variable in Database.cpp.

Release 32 [17-May-2012]
	- darwinup: Updated trigger for xpchelper cacher rebuild.

Release 31 [22-Mar-2012]
	- darwintrace: fixed crash when used by multi-threaded applications

Release 30 [15-Mar-2012]
	- darwinup: not detecting installs into /System/Library/Sandbox/Profiles

Release 29 [15-Feb-2012]
	- darwintrace: posix_spawn may have NULL envp parameter

Release 28.1 [9-Feb-2012]
	- darwinup: Don't include actual mach-o binaries in the test suite.

Release 28 [8-Feb-2012]
	- darwinup: Display more helpful error if unable to create a depot.
	- darwinup: Touch /System/Library/Extensions when uninstalling kernel extensions.
	- darwinup: Run xpchelper on system sandbox profile changes.

Release 27 [23-Jan-2012]
	- darwinup: Clear quarantine xattr from installed files.
	- darwinup: Correctness fix for has_suffix.

Release 26.5 [29-Nov-2011]
        - all: set correct INSTALL_PATH for iOS simulator

Release 26.4 [17-Nov-2011]
	- darwintrace: files opened with fopen(3) are missing from trace log

Release 26.3 [11-Nov-2011]
	- darwintrace: darwintrace_make_environ bug unsets DYLD_INSERT_LIBRARIES

Release 26.2 [9-Nov-2011]
	- darwintrace: build failure on 10.6, undefined symbol __posix_spawn
	- darwintrace: crash in darwintrace_make_environ

Release 26.1 [7-Nov-2011]
	- darwintrace: compiler warning build fix

Release 26 [6-Nov-2011]
	- darwintrace: preserve DYLD_INSERT_LIBRARIES and DARWINTRACE_LOG
	- darwintrace: interpose posix_spawn

Release 25 [4-Nov-2011]
	- darwinup: support for rebuilding xpchelper cache

Release 24.1 [17-Jun-2011]